<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">multiNote</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name_text">Enter your login/password</string>
    <string name="register_user_text">User registration</string>
    <string name="login">Login</string>
    <string name="enter_button">Login</string>
    <string name="registration_tab">Registration</string>
    <string name="register_button">Register</string>
    <string name="password">Password</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="passwords_changed">Password has been changed</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="rep_pass">Repeat password</string>
    <string name="change_pass">Change password</string>
    <string name="change_pass_button">Change password</string>
    <string name="exit">Exit</string>
    <string name="note_title">Title</string>
    <string name="note">Note text</string>
    <string name="new_note">New note</string>
    <string name="save">Save</string>
    <string name="deteting">Deleting</string>
    <string name="note_delete">Delete note?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_login_pass">Wrong login/password</string>
    <string name="select_all">Select all</string>
    <string name="add_note">Add new note</string>
    <string name="save_note">Save note?</string>
    <string name="note_added">New note added</string>
    <string name="note_updated">Note updated</string>
    <string name="loading">Loading&#8230;</string>
    <string name="about">About</string>
    <string name="about_text">App was created on the base of ISD learning center.\n 
        \n
        Copyright &#169; 2014 Karaman Andrey\n
\n
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n
\n
The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.\n
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
    <string name="about_rate_app">Rate app</string>
    <string name="wrong_password">Wrong password</string>
    <string name="same_password">Same password to previous</string>
    <string name="wrong_old_password">Wrong old password</string>
    <string name="login_not_free">Login not free</string>
    <string name="error_db">Error while connectin server</string>
    <string name="unknown_error">Unknown error</string>
    <string name="title_activity_items_list">ItemsListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>

</resources>