<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andreykaraman.multinote.NoteList" >

    <item
        android:id="@+id/change_pass"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/change_pass"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>
    <item
        android:id="@+id/actionAddNote"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="always"
        android:title="@string/add_note"/>

</menu>